# roads-management-insights-samples

route-registration-tool/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
route-registration-tool/alembic/: env.py  script.py.mako
route-registration-tool/alembic/versions/: 41a6cc503c59_initial_postgres_schema.py  7b2f6a8f2d10_add_sessions_and_project_session_id.py  c3e8a1b2f4c0_project_name_unique_per_session.py
route-registration-tool/docs/: overview.md  usage-guide.md
route-registration-tool/server/: main.py
route-registration-tool/server/core/: db_setup.py
route-registration-tool/server/db/: common.py  config.py  database.py  postgres.py  sql_params.py  sqlite.py
route-registration-tool/server/routes/: all_routes.py  batch_save.py  client_config.py  export.py  polygon_routes_api.py  projects.py  projects_list.py  roads.py  roads_connectivity.py  routes.py  routes_status.py  segmentation.py  sessions.py  stretch_roads.py  sync.py  tiles.py  users.py
route-registration-tool/server/utils/: auth.py  check_routes_status.py  compute_parent_sync_status.py  create_engine.py  db_gcs.py  feature_flags.py  intersection_points.py  listening_to_pub_sub.py  (+5 more)
route-registration-tool/tests/: conftest.py  test_alembic_config.py  test_db_backend_factory.py  test_db_config.py  test_preferences_datetime_normalization.py  test_projects_repo_create.py  test_projects_repo_domain_exceptions.py  test_projects_route_error_envelope.py  test_query_db_sqlite_memory.py  test_sql_params.py
route-registration-tool/ui/: index.html  package-lock.json  package.json
(+43 files in other folders)
